sjengida/g3/gen
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1231:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v21 = _mm_unpacklo_epi32( v43, _mm_cvtsi32_si128( v15)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1242:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v61 = _mm_unpacklo_epi32( v43, _mm_cvtsi32_si128( v15)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1254:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v21 = _mm_unpacklo_epi32( v19, _mm_cvtsi32_si128( v17)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1257:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v61 = _mm_unpacklo_epi32( v19, _mm_cvtsi32_si128( v17)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1314:32: error: expected expression
if ( !moved[110] && *( _OWORD *)( &board + 110) == __PAIR128__( 0xD0000000DLL, 0xD00000008LL) ) 
                               ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1314:24: error: use of undeclared identifier '_OWORD'
if ( !moved[110] && *( _OWORD *)( &board + 110) == __PAIR128__( 0xD0000000DLL, 0xD00000008LL) ) 
                       ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1468:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v33 = _mm_unpacklo_epi32( v42, _mm_cvtsi32_si128( v27)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1479:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v60 = _mm_unpacklo_epi32( v42, _mm_cvtsi32_si128( v27)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1491:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v33 = _mm_unpacklo_epi32( v31, _mm_cvtsi32_si128( v29)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1494:56: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v60 = _mm_unpacklo_epi32( v31, _mm_cvtsi32_si128( v29)).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1551:31: error: expected expression
if ( !moved[26] && *( _OWORD *)( &board + 26) == __PAIR128__( 0xD0000000DLL, 0xD00000007LL) ) 
                              ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/moves.c:1551:23: error: use of undeclared identifier '_OWORD'
if ( !moved[26] && *( _OWORD *)( &board + 26) == __PAIR128__( 0xD0000000DLL, 0xD00000007LL) ) 
                      ^
12 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/gen/src/obj/moves.o] Error 1
